hphp/test/slow/reassign_this/1491.php.expectf
HipHop Fatal error: Cannot re-assign $this in %s/test/slow/reassign_this/1491.php on line 4
